[package]
name = "ens-name-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.17.0", features = ["ws-tokio"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "3.0.0-rc.8", features = ["derive"] }
